新增CSS介绍，更改目录

--- a/days/day001/index.html
+++ b/days/day001/index.html
@@ -23,7 +23,7 @@
             1 &nbsp; &lt; &nbsp; 0
             <pre>1 &nbsp; &lt; &nbsp; 0</pre>
         </div>
-        <img width="100" height="100" src="./image/tulips.jpg" title="我是郁金香">
+        <img width="100" height="100" src="image/tulips.jpg" title="我是郁金香">
     </body>
 
 </html>
