--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
     <section class="main-content">
       <h3>
 
-      <a href="./day001/index.html">Day 001</a>
-        </h3>
+	    <table border="2px">
+          <tr>
+            <td><a href="./days/day001/index.html">Day 001</a></td>
+	        <td><a href="./days/day002/css.html">Day 002</a></td>
+          </tr>
+        </table>
+      </h3>
       <!--<h3>
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
