--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     <section class="main-content">
       <h3>
 
-	    <table border="2px">
-          <tr>
-            <td><a href="./days/day001/index.html">Day 001</a></td>
-	        <td><a href="./days/day002/css.html">Day 002</a></td>
+	<table border="1px" style="border: 1px solid blue">
+            <tr>
+              <td><a href="./days/day001/index.html">Day 001</a></td>
+	      <td><a href="./days/day002/css.html">Day 002</a></td>
+                <td><a href="./days/day003/DiffBtwBlockAndInline.html">Day 003</a></td>
+
           </tr>
         </table>
       </h3>
